# HirePrism

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt  tmp46zotz3j.json
.claude/: settings.local.json
data/insights/: insight_report.json  insight_report.md
data/processed/: bridge_offer_branches.parquet  fact_offers_clean.parquet  placelytics.duckdb  raw_flat_offers.parquet
data/quality/: anomaly_summary.json  quality_history.jsonl  quality_report.json
data/raw/: placements.json
docs/: assumptions.md  data_dictionary.md  deep_dive_interview_guide.md  interview_prep.md  metrics_catalog.md  system_design.md
metrics/definitions/: branches.yaml  compensation.yaml  eligibility.yaml  roles.yaml
notebooks/: 01_profiling.ipynb  03_insight_discovery.ipynb
sql/: kpis.sql
sql/views/: vw_branch_summary.sql  vw_company_summary.sql  vw_compensation_unknown.sql  vw_high_package_offers.sql  vw_internship_summary.sql  vw_no_cgpa_offers.sql  vw_role_summary.sql
src/agent/: graph.py  nodes.py  prompts.py  tools.py
src/anomaly/: build_anomalies.py  detector.py  explainer.py
src/app/: components.py  main.py
src/cleaning/: build_clean.py  extract_notes.py  normalize_branches.py  normalize_roles.py  parse_ctc.py  parse_dates.py  parse_stipend.py
tests/: test_agent.py  test_anomaly.py  test_branch_mapping.py  test_build_tables.py  test_flatten_offers.py  test_insights.py  test_load_json.py  test_metrics.py  test_parse_ctc.py  test_parse_stipend.py  test_quality_scorer.py  test_role_mapping.py
(+18 files in other folders)
